<resources>
    <string name="app_name">MOV app</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_desc">Lebih mudah untuk mengetahui \nfilm yang sedang tampil</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_desc">Tidak Khawatir Ketinggalan \nUpdate Film Terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_desc">Gunakan e-wallet untuk \ntransaksi tiiket nonton</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sing_up">Sing Up</string>
    <string name="nama">Nama</string>
    <string name="email">Alamat Email</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="photo">Photo</string>
    <string name="selamat_datang">Selamat Datang\nBarni Barnabas</string>
    <string name="simpan_dan_lanjutkan"><![CDATA[Simpan & Lanjutkan]]></string>
    <string name="coming_soon">Coming Soon</string>
    <string name="storyboard">Ringkasan Cerita</string>
    <string name="pemain">Pemain</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="beli_ticket">Beli Ticket</string>
    <string name="checkout">Checkout</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="batalkan">Batalkan</string>
    <string name="kapan">Kapan</string>
    <string name="tgl_dan_waktu"><![CDATA[Tanggal & Waktu]]></string>
    <string name="bioskop">Bioskop</string>
    <string name="bangku">Bangku</string>
    <string name="bangku_no_c1">Bangku No.C1</string>
    <string name="bangku_no_c2">Bangku No.C2</string>
    <string name="total_bayar">Total yang harus dibayar</string>
    <string name="e_wallet">E-wallet</string>
    <string name="jumlah_saldo">Jumlah Saldo</string>
    <string name="simpan_perubahan">Simpan Perubahan</string>
    <string name="ubah_profil">Ubah Profil</string>
    <string name="my_wallet">My Wallet</string>
    <string name="riwayat">Riwayat</string>
    <string name="masuk_akun">MASUK AKUN</string>
    <string name="daftar_akun_baru">DAFTAR AKUN BARU</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selamat_menonton">Selamat Menonton !</string>
    <string name="sukses_decs">Ticket telah berhasil dibeli \n dan selamat menikmati film</string>
    <string name="lihat_tiket">Lihat Tiket</string>
    <string name="home">Home</string>
    <string name="print_cepat">Print Cepat</string>

</resources>
